fix: paths, errors in auth, email

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Opizza</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/x-icon" th:href="@{/img/favicon.ico}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script th:src="@{/js/scripts.js}" defer></script>
 </head>
@@ -12,11 +13,11 @@
 <body class="flex flex-col min-h-screen">
     <nav class="text-white shadow-lg">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-            <a th:href="@{/}" class="text-2xl font-bold text-blue-600"><img th:src="@{/img/logo.png}" alt="Logo"><i class="fa fa-pizza-slice"></i> Opizza</a>
+            <a th:href="@{/}" class="flex items-center text-2xl font-bold text-gray-600 gap-4"><img th:src="@{/img/logo.png}" alt="Logo" width="60"> Opizza</a>
 
             <div class="flex items-center space-x-6">
                 <form th:action="@{/}" method="get" class="relative">
-                    <input type="text" name="search" placeholder="Hľadať pizzu" class="rounded-full px-4 py-1 w-64 border-blue-600">
+                    <input type="text" name="search" placeholder="Hľadať pizzu" class="rounded-full px-4 py-1 w-64 border border-gray-300">
                     <button type="submit" class="absolute right-3 top-1">
                         <i class="fa fa-search text-blue-600"></i>
                     </button>
@@ -31,7 +32,7 @@
                 </div>
 
                 <div sec:authorize="isAuthenticated()" class="flex items-center space-x-4">
-                    <span class="font-semibold" th:text="${#authentication.principal.firstName}">Meno</span>
+                    <a th:href="@{/profile}" class="font-semibold text-gray-600" th:text="${#authentication.principal.firstName}">Meno</a>
                     <form th:action="@{/logout}" method="post">
                         <button type="submit" class="text-sm px-3 py-1 rounded-full text-blue-600">Odhlásiť</button>
                     </form>
