--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -28,6 +28,9 @@
                 <a th:href="@{/admin/categories}" class="text-gray-600 hover:text-blue-600 font-medium">
                     Kategorii
                 </a>
+                <a th:href="@{/admin/tags}" class="text-gray-600 hover:text-blue-600 font-medium">
+                    Tagy
+                </a>
             </div>
 
             <form th:action="@{/}" method="get" class="relative">
