--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -47,7 +47,7 @@
 
             <form th:action="@{/}" method="get" class="relative">
                 <input type="text" name="search" placeholder="Hľadať pizzu"
-                       class="rounded-full px-4 py-1 w-64 border border-gray-300 text-gray-700 focus:outline-none focus:border-blue-500">
+                       class="rounded-lg px-4 py-1 w-64 border border-gray-300 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600">
                 <button type="submit" class="absolute right-3 top-1">
                     <i class="fa fa-search text-blue-600"></i>
                 </button>
@@ -107,7 +107,7 @@
 
         <form th:action="@{/}" method="get" class="relative">
             <input type="text" name="search" placeholder="Hľadať pizzu"
-                   class="w-full rounded-lg px-4 py-2 border border-gray-300 text-gray-700">
+                   class="w-full rounded-lg px-4 py-2 border border-gray-300 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600">
             <button type="submit" class="absolute right-3 top-2">
                 <i class="fa fa-search text-blue-600"></i>
             </button>
