--- a/src/main/resources/templates/cart/index.html
+++ b/src/main/resources/templates/cart/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="text-right w-24">
                         <p class="text-sm text-gray-400">Cena</p>
-                        <p class="font-bold text-blue-600" th:text="${item.productVariant.price * item.quantity} + ' €'"></p>
+                        <p class="font-bold text-blue-600" th:text="${#numbers.formatDecimal(item.productVariant.price * item.quantity, 1, 2) + ' €'}"></p>
                     </div>
                     <form th:action="@{'/cart/remove/' + ${item.id}}" method="post">
                         <button type="submit" class="text-red-600 hover:text-red-700 transition delete-btn">
@@ -45,7 +45,7 @@
 
             <div class="bg-gray-100 p-6 rounded-xl flex justify-between items-center mt-8">
                 <span class="text-xl font-bold">Celková suma:</span>
-                <span class="text-3xl font-black text-blue-600" th:text="${totalPrice} + ' €'"></span>
+                <span class="text-3xl font-black text-blue-600" th:text="${#numbers.formatDecimal(totalPrice, 1, 2) + ' €'}">0.00 €</span>
             </div>
 
             <div class="flex justify-between mt-8">
